--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,18 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.5.1",
-    "mysql2": "^3.6.1",
-    "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "serverless-mysql": "^1.5.5"
+    "next": "13.5.4"
   },
   "devDependencies": {
     "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.4",
     "postcss": "^8",
-    "tailwindcss": "^3"
+    "tailwindcss": "^3",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.4"
   }
 }
